osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experiment_bucket_size_too_large[buckets0-bucket_sizes0].txt
error: 
                    75 is over the
                    current max of 50.
                    Either reduce the bucket size or reduce the number of buckets
                    
--> main.sml:3:65
     |
   3 | A = Experiment(entity=E1, buckets=['control', 'b'], bucket_sizes=[75, 25], version=1, revision=1)
     |                                                                  ^ 
                                                                        |                     max percentage size of each bucket is 100/(# of buckets) rounded
                                                                        |                     down to the nearest hundreth decimal place
                                                                        |                     